--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
 }
 
 dependencies {
-
+    // SplashActivity -> 화면 애니메이션 구현 라이브러리 의존성 추가
+    implementation 'com.jaredrummler:animated-svg-view:1.0.6'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
