--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,29 @@
         android:theme="@style/Theme.BlutetoothStudy"
         tools:targetApi="31">
         <activity
-            android:name=".PairingActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".activity.SplashActivity"
             android:exported="true">
+            <!-- <intent-filter>를 포함하고 있는 <activity> 태그가 어플리케이션 최초 실행 액티비티. -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.AlarmActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.PairingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.BluetoothActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
