--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    // 구글 서비스 플러그인 추가
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,6 +32,15 @@ android {
 dependencies {
     // SplashActivity -> 화면 애니메이션 구현 라이브러리 의존성 추가
     implementation 'com.jaredrummler:animated-svg-view:1.0.6'
+    // 파이어베이스 BoM 의존성 추가
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    // 파이어베이스 메시지 서비스를 위한 의존성 추가
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    // 구글 파이어베이스 애널리틱스 의존성 추가
+    implementation 'com.google.firebase:firebase-analytics'
+    // API 31 이상을 위한 의존성 추가
+    implementation 'androidx.work:work-runtime:2.7.1'
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
