--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.3'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.0-beta03' apply false
     id 'com.android.library' version '7.2.0-beta03' apply false
+    // 구글 파이어베이스 플러그인 추가
+    id 'com.google.gms.google-services' version '4.3.13' apply false
 }
 
 task clean(type: Delete) {
